lots of changes and git actions

--- a/index.html
+++ b/index.html
@@ -34,21 +34,29 @@
 
         <!-- HERO -->
         <section id='hero' class='hero'><div class='content-wrap'>
+          <div class='shapes one'><div class='blue-box'></div></div>
+          <div class='shapes two'><img src='MEDIA/SQUARES/1-orange.png'/><img src='MEDIA/SQUARES/5-gray.png'/><div class='blue-box one'></div><div class='blue-box two'></div></div>
+          <div class='shapes three'><img src='MEDIA/SQUARES/2-gray.png'/><img src='MEDIA/SQUARES/8-orange.png'/><div class='blue-box one'></div><div class='blue-box two'></div></div>
+          <div class='shapes four'><img src='MEDIA/SQUARES/7-gray.png'/><div class='blue-box'></div></div>
           <div class='top'><!----></div>
           <div class='center'>
-            <h2>What is your</h2>
-           <img class='center-logo' src='MEDIA/main-logo.svg'/>
+            <h2>Know your<span class='screen-reader-only'> Impact</span></h2>
+            <img class='logo-img one' src='MEDIA/SQUARES/3-gray.png'>
+            <img class='logo-img two' src='MEDIA/SQUARES/2-orange.png'>
+            <img class='logo-img three' src='MEDIA/SQUARES/4-gray.png'>
+            <img class='center-logo' src='MEDIA/main-logo.svg'/>
           </div>
           <a href='#quiz'>Questionnaire<span><!----></span></a>
         </div></section>
 
         <section id='quiz' class='quiz'><button class='prev'>&lt;</button><div class='content-wrap'>
-          <h2>Global Footprint Questionaire</h2>
+          <h2>Global Footprint questionnaire</h2>
           <form>
             <div class='step step-one'>
               <div class='top'>
                 <div class='blob'>
                   <p>1</p>
+                  <img src='MEDIA/SQUARES/2-gray.png'/>
                 </div>
                 <h3>How often do you eat animal-based&nbsp;products?</h3>
               </div>
@@ -75,7 +83,13 @@
               </div>
             </div>
             <div class='step step-three'>
-              <h3>Which housing type best describes your home?</h3>
+              <div class='top'>
+                <div class='blob'>
+                  <p>3</p>
+                  <img src='MEDIA/SQUARES/3-gray.png'/>
+                </div>
+                <h3>Which housing type best describes your home?</h3>
+              </div>
               <label for='no-water'>Freestanding, no running water</label><input id='no-water' type='radio'/>
               <label for='water'>Freestanding, running water</label><input id='water' type='radio'/>
               <label for='apartment'>Multi-story apartment</label><input id='apartment' type='radio'/>
@@ -91,7 +105,7 @@
               <label for='steel'>Steel/Other</label><input id='steel' type='radio'/>
             </div>
           </form>
-          <p class='disclaimer'>This questionaire was taken from the Global Footprint Network&reg;</p>
+          <p class='disclaimer'>This questionnaire was taken from the Global Footprint Network&reg;</p>
         </div><button class='next'>&gt;</button></section>
 
         <section id='minefield' class='minefield'><div class='content-wrap'>
@@ -100,6 +114,10 @@
         </div></section>
 
         <section id='result' class='result'><div class='content-wrap'>
+          <div class='result-instructions'>
+            <h2>Some Words</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur amet quos accusantium, saepe impedit distinctio sed eaque vero cupiditate aliquam animi voluptatem, praesentium aut hic dolorum? Ad, iste maxime! Nam?</p>
+          </div>
           <div id='poster'><!-- JS --></div>
         </div></section>
 
