adding more detail

--- a/index.html
+++ b/index.html
@@ -57,10 +57,13 @@
             <h2>Global Footprint questionnaire</h2>
             <form>
               <div class='step step-one'>
+                <div class='shapes three'><img src='MEDIA/SQUARES/1-orange.png'/><img src='MEDIA/SQUARES/8-gray.png'/></div>
+                <div class='shapes four'><div class='blue-box'></div></div>
                 <div class='intro'>
-                  <h3>What's your Impact?</h3>
-                  <p>Lorem ipsum, dolor sit amet consect*etur adipisicing elit. Maiores* numquam nobis natus quis expedita suscipit, consequuntur autem pariatur ea. Eveniet animi atque eligendi modi amet! Officiis, recusandae ex? Impedit, nihil.</p>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem aliquam omnis maiores et sit quo iure voluptatem dolores soluta exercitationem. Nisi obcaecati sapiente aut natus saepe? Commodi recusandae quam vel.</p>
+                  <h3>What&lsquo;s your Impact?</h3>
+                  <p>Welcome to the Impact Exhibit, here at the Musuem Name! The goal of the exhibition is to collect data about your eco-habits, and to create a visual representation of our community, and how our different Global Footprints come together to affect the world.</p>
+                  <p>To make the data we receive a little more interesting for you, we've paired a quiz together with a quick game of Minesweeper. Take the quiz, play the game, and get a printed poster (printed on recycled paper, of course), that we'll hang here in the exhibition.</p>
+                  <p>Ready to start? Hit the arrow to the right to begin the quiz!</p>
                 </div>
               </div>
               <div class='step step-two'>
@@ -139,8 +142,9 @@
 
         <section id='result' class='result'><div class='content-wrap'>
           <div class='result-instructions'>
-            <h2>Some Words</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur amet quos accusantium, saepe impedit distinctio sed eaque vero cupiditate aliquam animi voluptatem, praesentium aut hic dolorum? Ad, iste maxime! Nam?</p>
+            <h2>Your Impact</h2>
+            <p>Thank you for participating! Feel free to try again; we will build another Minesweeper game based on your quiz. However, remember that the objective is not to "win" the game, but to get a better understanding of how difficult it can be to be eco-concious in our current world.</p>
+            <p>If you're satisfied with your result, head on over to the printer. Someone there will have your result printed out as a poster to be hung in the exhibition, as well as a postcard of your creation you can take home with you.</p>
             <a href="#final-thoughts">Food for thought...</a>
           </div>
           <div id='poster'><!-- JS --></div>
