all done besides reset button

--- a/index.html
+++ b/index.html
@@ -134,13 +134,17 @@
           <button class='next'><img src='MEDIA/arrow-icon.svg'/></button>
         </section>
 
-        <section id='minefield' class='minefield'><div class='content-wrap'>
-          <p class='instructions'>Based on your answers, we've set up a game of Minesweeper for you to play!</p>
+        <section id='minefield' class='minefield'>
+          <div class='shapes one'><img src='MEDIA/SQUARES/2-orange.png'/><div class='blue-box one'></div><div class='blue-box two'></div><div class='blue-box three'></div></div>
+          <div class='shapes two'><img src='MEDIA/SQUARES/7-gray.png'/><img src='MEDIA/SQUARES/4-orange.png'/><div class='blue-box one'></div><div class='blue-box two'></div></div>
+          <div class='content-wrap'>
           <div id='minefield-game'> <!-- Minefield --> </div>
-          <a href='https://www.instructables.com/How-to-play-minesweeper/#:~:text=The%20rule%20of%20the%20game,that%20there%20is%20a%20mine.' target="_blank">Don't know the rules? Find out how to play!</a>
+          <a href='https://www.instructables.com/How-to-play-minesweeper/#:~:text=The%20rule%20of%20the%20game,that%20there%20is%20a%20mine.' target="_blank">Don't know the rules? <span>Find out how to play!</span></a>
         </div></section>
 
-        <section id='result' class='result'><div class='content-wrap'>
+        <section id='result' class='result'>
+          <div class='shapes one'><img src='MEDIA/SQUARES/1-gray.png'/><img src='MEDIA/SQUARES/3-orange.png'/><div class='blue-box one'></div><div class='blue-box two'></div></div>
+          <div class='content-wrap'>
           <div class='result-instructions'>
             <h2>Your Impact</h2>
             <p>Thank you for participating! Feel free to try again; we will build another Minesweeper game based on your quiz. However, remember that the objective is not to "win" the game, but to get a better understanding of how difficult it can be to be eco-concious in our current world.</p>
